crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_-8.56 .snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Double,
    ),
    5,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: None,
    },
)
