crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_-867.5688 .snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Double,
    ),
    9,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: None,
    },
)
